code-gen/templates/customer-hub/region/custom-resources/ext-ingresses.yaml
# NOTES:
# - This custom patch is not applied to the cluster by default,
#   adding this patch will expose all the private services to the public.
#
# - Make sure WAF is enabled for all the public endpoints before applying
#   this patch.

# This defines the ingress for the Ping Delegated Admin service

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pingcentral-ingress
  namespace: ${PING_CLOUD_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-private
spec:
  tls:
  - hosts:
    - pingcentral.${DNS_ZONE}
  rules:
  - host: pingcentral.${DNS_ZONE}
    http:
      paths:
      - path: /
        backend:
          serviceName: pingcentral
          servicePort: 9022
